[gd_scene load_steps=7 format=3 uid="uid://bdgajjjuk7df6"]

[ext_resource type="Script" uid="uid://bb2nvlxo062du" path="res://Cenas/LightArmor/FairyLight/BulletFairyLight/bullet.gd" id="1_gv2so"]
[ext_resource type="Texture2D" uid="uid://cgb467h0a8e2c" path="res://Assets/Objects/Bullet/FairyLight/fairy_light_bullet.png" id="2_vlmqe"]
[ext_resource type="Texture2D" uid="uid://cybjamgolcp2e" path="res://icon.svg" id="3_vlmqe"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vlmqe"]
radius = 24.2857

[sub_resource type="Gradient" id="Gradient_daok4"]
offsets = PackedFloat32Array(0, 0.0192308, 0.679487)
colors = PackedColorArray(1, 1, 1, 1, 0.9, 0.9, 0.9, 1, 0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_map78"]
gradient = SubResource("Gradient_daok4")
fill = 1
fill_from = Vector2(0.5, 0.5)

[node name="Bullet" type="Node2D" node_paths=PackedStringArray("icon", "light_area", "area")]
scale = Vector2(0.7, 0.7)
script = ExtResource("1_gv2so")
icon = NodePath("FairyLightBullet")
light_area = NodePath("LightArea")
area = NodePath("BodyArea")
speed = 3.0

[node name="Icon" type="Sprite2D" parent="."]
visible = false
position = Vector2(-8.57143, -7.14286)
scale = Vector2(1, 1)
texture = ExtResource("3_vlmqe")

[node name="FairyLightBullet" type="Sprite2D" parent="."]
texture_filter = 1
rotation = -0.794125
texture = ExtResource("2_vlmqe")

[node name="BodyArea" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="BodyArea"]
polygon = PackedVector2Array(-2, -19, 2, -16, 2, -9, -3, 1, 2, 7, 0, 21, -2, 19, -2, 6, -6, 1, -5, -4, -1, -9)

[node name="LightArea" type="Area2D" parent="."]
scale = Vector2(1, 1)
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="LightArea"]
shape = SubResource("CircleShape2D_vlmqe")

[node name="PointLight2D" type="PointLight2D" parent="."]
scale = Vector2(1.5, 1.5)
texture = SubResource("GradientTexture2D_map78")

[connection signal="body_entered" from="BodyArea" to="." method="_on_body_area_ene_body_entered"]
[connection signal="body_entered" from="LightArea" to="." method="_on_light_area_ene_body_entered"]
[connection signal="body_exited" from="LightArea" to="." method="_on_light_area_ene_body_exited"]
